Improved: Fixing defects reported by FindBugs, package org.apache.ofbiz.base.util.test. (OFBIZ-9722)
Thanks Julian Leichert for reporting and providing the patch.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/ofbiz-framework/trunk@1817568 13f79535-47bb-0310-9956-ffa450edef68